Support java 8